# basset-vault-contracts-addrs-holder

./: Cargo.toml  README.md  build_release.sh
artifacts/: basset_vault_contracts_addrs_holder.wasm  checksums.txt  checksums_intermediate.txt
src/: contract.rs  lib.rs  msg.rs  state.rs
