[package]
name = "basset-vault-contracts-addrs-holder"
version = "1.0.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "The utility for bAsset vault_contracts integration tests"
license = "Apache-2.0"
repository = "git@github.com:Nexus-Protocol/basset-vault-contracts-addrs-holder.git"
homepage = ""
documentation = ""

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8.1" }
cosmwasm-std = { version = "0.16.1", features = ["iterator"] }
cw-storage-plus = { version = "0.8.1" }
schemars = "0.8.3"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
cosmwasm-bignumber = "2.2.0"
terra-cosmwasm = { version = "2.2" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.1", features = ["iterator"] }
